Basic Addon Setup, Basic Thumbnail Integration

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,5 @@
 {
   "name": "photoswipe addon",
   "description": "Photoswipe addon",
-  "homepage": "https://github.com/jChris85/photoswipe-addon",
-  "dependencies": {
-    "jquery": "1.11.3",
-    "photoswipe": "4.1.0"
-  }
+  "homepage": "https://github.com/jChris85/photoswipe-addon"
 }
